tests/fixtures/errors/unknown_function.ksr
// Unknown function: bogus is not a built-in function
param x: Dimensionless = 1.0;
node y: Dimensionless = bogus(@x);
